cfn-template.yml
AWSTemplateFormatVersion: 2010-09-09
Description: |
  Kittens Carousel is a static website application deployed with Apache Web Server on AWS Elastic Compute Cloud (EC2) Instance using AWS Cloudformation Service.
# Use public Systems Manager Parameter
Parameters:
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amazon2023-ami-hvm-x86_64-gp2' # Latest, up-to-date and free 'ami' 

Resources:
  myucelinstanceWS:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId  # we give ami reference
      InstanceType: t2.micro
      KeyName: firstkey # Use your own key pair without ".pem"
      SecurityGroups:
        - !Ref MyucelinstanceSG
      Tags:
        - Key: Name
          Value: myucelcfninstance
        - Key: Enviroment
          Value: Dev
      UserData:
        Fn::Base64: |
          #! /bin/bash
          yum update -y 
          yum install httpd -y
          FOLDER="https://raw.githubusercontent.com/myucel92/101-kittens-carousel-static-website-ec2/main/static-web"
          cd /var/www/html
          wget $FOLDER/index.html
          wget $FOLDER/cat0.jpg
          wget $FOLDER/cat1.jpg
          wget $FOLDER/cat2.jpg
          systemctl start httpd
          systemctl enable httpd

  myucelinstanceSG:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allows SSH - Http # Required
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
  Outputs:
    WebsiteURL:
      Value: !Sub 
        - http://${PublicAddress}
        - PublicAddress: !GetAtt myucelinstanceWS.PublicDnsName
      Description: Kittens Carousel Application URL
